--- a/vezbe_15_05/PasswordValidator/pom.xml
+++ b/vezbe_15_05/PasswordValidator/pom.xml
@@ -21,5 +21,17 @@
       <version> 4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version> 7.19.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version> 7.19.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
